# WjSsh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.rc  build_release.ps1  publish_github_release.ps1  publish_to_github.ps1  quick_publish.ps1  resources.qrc  setup_github_publish.ps1
.github/: RELEASE_TEMPLATE.md
.github/workflows/: windows-release.yml
installer/: install.cmd  install.ps1
src/: CommandLineEdit.cpp  CommandLineEdit.h  ConnectionPane.cpp  ConnectionPane.h  DebugTrace.h  Localization.cpp  Localization.h  MainWindow.cpp  MainWindow.h  RemoteFileEditorDialog.cpp  RemoteFileEditorDialog.h  RemoteServerStatsMonitor.cpp  RemoteServerStatsMonitor.h  SessionEditorDialog.cpp  SessionEditorDialog.h  SessionProfile.h  SessionRepository.cpp  SessionRepository.h  SftpClient.cpp  SftpClient.h  SshCommon.cpp  SshCommon.h  SshShellClient.cpp  SshShellClient.h  SystemStatsMonitor.cpp  SystemStatsMonitor.h  TerminalView.cpp  TerminalView.h  UiChrome.cpp  UiChrome.h  main.cpp
